feat(c7): ambulance waiting list
